# v4r

./: .gitmodules  CMakeLists.txt
data/shaders/: CMakeLists.txt  brdf.glsl  color_unlit.frag  color_unlit.vert  shader_common.h  shaders_cfg.json  texture_unlit.frag  texture_unlit.vert  uber.frag  uber.vert  unlit.frag  unlit.vert
include/: v4r.h  v4r.hpp
include/v4r/: assets.hpp  assets.inl  config.hpp  cuda.hpp  debug.hpp  display.hpp  environment.hpp  environment.inl  fwd.hpp  impl.inl  pipelines.hpp  preprocess.hpp  stats.hpp  utils.hpp
scripts/: gen_pipelines.py  gen_shader_defines.py  gen_vk_dispatch.py
src/: CMakeLists.txt  asset_load.hpp  asset_load.inl  cuda_state.cpp  cuda_state.cu  cuda_state.hpp  cuda_state.inl  descriptors.cpp  descriptors.hpp  dispatch.cpp  dispatch.hpp  dispatch.template  linux_hacks.cpp  preprocess.cpp  profiler.hpp  profiler.inl  renderdoc_interop.cpp  save_frame.cpp  save_frame.cu  scene.cpp  scene.hpp  shader.hpp  utils.cpp  utils.hpp  v4r.cpp  v4r_cuda.cpp  v4r_display.cpp  v4r_utils.hpp  vk_utils.cpp  vk_utils.hpp  vk_utils.inl  vulkan_config.hpp  vulkan_handles.cpp  vulkan_handles.hpp  vulkan_memory.cpp  vulkan_memory.hpp  vulkan_state.cpp  vulkan_state.hpp  vulkan_state.inl
src/pipelines/: CMakeLists.txt  pipeline_cfg.json
src/pipelines/shaders/: mesh_common.h  meshcull.comp  primary.rgen  primary.rmiss  primary_uber.rchit  primary_uber.rgen  primary_uber.rmiss  rt_common.h  shader_common.h  uber.frag  uber.rchit  uber.rgen  uber.rmiss  uber.vert
